[package]
name = "poset"
version = "0.1.0"
authors = ["Alfie Davies <research@alfied.xyz>"]
edition = "2024"
rust-version = "1.85.0"
description = "A simple implementation of posets."
readme = "README.md"
repository = "https://github.com/alfiemd/poset"
license = "Unlicense"
keywords = ["poset", "relation", "mathematics"]
categories = ["data-structures", "mathematics", "science"]

[dependencies]
rand = { version = "0.9.0", optional = true }
graff = { version = "0.1.0" , optional = true }
serde = { version = "1.0.210", optional = true }

[features]
serde = ["serde/derive", "graff?/serde"]
